--- a/package.json
+++ b/package.json
@@ -4,15 +4,25 @@
   "description": "website to help user to find the latest update about covid",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
     "mongoose": "^5.13.2"
-  }
+  },
+  "devDependencies": {
+    "jest": "^27.0.6"
+  },
+  
+    "scripts": {
+      "test": "jest"
+    }
+  
+ 
 }
