--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "website to help user to find the latest update about covid",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"No test specified\""
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -14,15 +14,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2"
   },
   "devDependencies": {
     "jest": "^27.0.6"
-  },
-  
-    "scripts": {
-      "test": "jest"
-    }
-  
- 
+  }
 }
