--- a/package.json
+++ b/package.json
@@ -4,20 +4,19 @@
   "description": "website to help user to find the latest update about covid",
   "main": "app.js",
   "scripts": {
-    "test": "jest"
    
+    "build": "react-scripts build",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
-  "engines": {
-    "node": "14.15.1"
-  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
+    "gh-pages": "^3.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2"
   },
