--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "website to help user to find the latest update about covid",
   "main": "app.js",
   "scripts": {
-   
-   
     "test": "jest"
   },
   "author": "",
@@ -18,7 +16,8 @@
     "express-validator": "^6.12.0",
     "gh-pages": "^3.2.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.2"
+    "mongoose": "^5.13.2",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "jest": "^27.0.6"
