--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "gh-pages": "^3.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemailer": "^6.6.3",
+    "nodemailer-express-handlebars": "^4.0.0"
   },
   "devDependencies": {
     "jest": "^27.0.6"
